# kick-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SPEC.md  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release-plz.yml
crates/kick-rs/: CHANGELOG.md  Cargo.toml  README.md
crates/kick-rs-assets/: CHANGELOG.md  Cargo.toml  README.md
crates/kick-rs-assets-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/kick-rs-assets-macros/src/: lib.rs
crates/kick-rs-assets/src/: lib.rs
crates/kick-rs-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/kick-rs-cli/src/: add.rs  check.rs  dev.rs  generate.rs  info.rs  lib.rs  main.rs  new.rs  register.rs  templates.rs
crates/kick-rs-cli/templates/generate/contributor/: file.rs.tmpl
crates/kick-rs-cli/templates/generate/module/: handlers.rs.tmpl  mod.rs.tmpl
crates/kick-rs-cli/templates/generate/service/: file.rs.tmpl
crates/kick-rs-cli/templates/new/: .env.example.tmpl  Cargo.toml.tmpl  README.md.tmpl
crates/kick-rs-cli/templates/new/src/: main.rs.tmpl
crates/kick-rs-cli/templates/new/src/modules/: mod.rs.tmpl
crates/kick-rs-cli/templates/new/src/modules/hello/: handlers.rs.tmpl  mod.rs.tmpl
crates/kick-rs-cli/tests/: scaffold_builds.rs
crates/kick-rs-config/: CHANGELOG.md  Cargo.toml  README.md
crates/kick-rs-config/src/: env.rs  lib.rs  merge.rs
crates/kick-rs-core/: CHANGELOG.md  Cargo.toml  README.md
crates/kick-rs-core/src/: adapter.rs  container.rs  contributor.rs  error.rs  introspect.rs  lib.rs  module.rs  mount_sort.rs  plugin.rs  scope.rs  service_impl.rs  token.rs
crates/kick-rs-http/: CHANGELOG.md  Cargo.toml  README.md
crates/kick-rs-http/src/: bootstrap.rs  contributors.rs  devtools.rs  error.rs  http_plugin.rs  inject.rs  lib.rs  middleware.rs  module.rs  module_list.rs  openapi.rs
crates/kick-rs-http/src/plugins/: assets.rs  compression.rs  cors.rs  helmet.rs  mod.rs  request_id.rs  request_logger.rs  trace_context.rs
crates/kick-rs-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/kick-rs-macros/src/: lib.rs
crates/kick-rs-macros/tests/: contributor.rs  paths.rs  routes.rs  service.rs
crates/kick-rs/src/: lib.rs
crates/rustkick/: CHANGELOG.md  Cargo.toml  README.md
crates/rustkick-assets/: Cargo.toml
crates/rustkick-assets/src/: lib.rs
crates/rustkick-cli/: Cargo.toml
crates/rustkick-cli/src/: main.rs
crates/rustkick-config/: Cargo.toml
crates/rustkick-config/src/: lib.rs
crates/rustkick-core/: CHANGELOG.md  Cargo.toml  README.md
crates/rustkick-core/src/: adapter.rs  container.rs  contributor.rs  error.rs  introspect.rs  lib.rs  module.rs  mount_sort.rs  plugin.rs  token.rs
crates/rustkick-http/: CHANGELOG.md  Cargo.toml  README.md
crates/rustkick-http/src/: bootstrap.rs  context.rs  error.rs  inject.rs  lib.rs  module.rs
crates/rustkick-http/src/plugins/: mod.rs
crates/rustkick-macros/: Cargo.toml
crates/rustkick-macros/src/: lib.rs
crates/rustkick/src/: lib.rs
examples/multi-tenant-api/: .env.example  Cargo.toml  README.md  compose.yml
examples/multi-tenant-api/migrations/: 20260522130000_setup_tenants.down.sql  20260522130000_setup_tenants.up.sql
examples/multi-tenant-api/src/: config.rs  main.rs
examples/multi-tenant-api/src/modules/posts/: handlers.rs  mod.rs  model.rs
examples/multi-tenant-api/src/tenancy/: mod.rs  registry.rs  tenant.rs  tenant_db.rs
examples/users-api/: .env.example  Cargo.toml  README.md  compose.yml
examples/users-api/migrations/: 20260522120000_create_users.down.sql  20260522120000_create_users.up.sql
examples/users-api/src/: config.rs  main.rs
examples/users-api/src/modules/: mod.rs
examples/users-api/src/modules/users/: handlers.rs  mod.rs  model.rs  repository.rs  service.rs
