[workspace]
resolver = "2"
members = [
    "crates/rustkick",
    "crates/rustkick-core",
    "crates/rustkick-http",
    "crates/rustkick-macros",
    "crates/rustkick-config",
    "crates/rustkick-assets",
    "crates/rustkick-cli",
]
exclude = ["examples"]

[workspace.package]
edition      = "2021"
rust-version = "1.78"
license      = "MIT"
repository   = "https://github.com/forinda/rustkick"
authors      = ["The rustkick contributors"]

[workspace.dependencies]
# Framework crates — kept in lockstep at the workspace level so the
# umbrella crate doesn't have to enumerate them with explicit versions.
rustkick-core    = { path = "crates/rustkick-core",    version = "0.0.0" }
rustkick-http    = { path = "crates/rustkick-http",    version = "0.0.0" }
rustkick-macros  = { path = "crates/rustkick-macros",  version = "0.0.0" }
rustkick-config  = { path = "crates/rustkick-config",  version = "0.0.0" }
rustkick-assets  = { path = "crates/rustkick-assets",  version = "0.0.0" }

# Runtime + HTTP
tokio       = { version = "1", features = ["full"] }
axum        = "0.7"
tower       = "0.5"
tower-http  = "0.6"
hyper       = "1"
http        = "1"
async-trait = "0.1"
futures     = "0.3"

# Serialization / error / utility
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"

# Proc-macro
syn   = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[profile.release]
lto         = "thin"
codegen-units = 1
strip       = "symbols"
