[workspace]
resolver = "2"
members = [
    "crates/kick-rs",
    "crates/kick-rs-core",
    "crates/kick-rs-http",
    "crates/kick-rs-macros",
    "crates/kick-rs-config",
    "crates/kick-rs-assets",
    "crates/kick-rs-cli",
]
exclude = ["examples"]

[workspace.package]
edition      = "2021"
rust-version = "1.78"
license      = "MIT"
repository   = "https://github.com/forinda/kick-rs"
authors      = ["The kick-rs contributors"]

[workspace.dependencies]
# Framework crates — kept in lockstep at the workspace level so the
# umbrella crate doesn't have to enumerate them with explicit versions.
kick-rs-core    = { path = "crates/kick-rs-core", version = "0.1.0-alpha.2" }
kick-rs-http    = { path = "crates/kick-rs-http", version = "0.1.0-alpha.2" }
kick-rs-macros  = { path = "crates/kick-rs-macros", version = "0.1.0-alpha.2" }
kick-rs-config  = { path = "crates/kick-rs-config",  version = "0.1.0-alpha.1" }
kick-rs-assets  = { path = "crates/kick-rs-assets",  version = "0.0.0" }

# Runtime + HTTP
tokio       = { version = "1", features = ["full"] }
axum        = "0.7"
tower       = "0.5"
tower-http  = "0.6"
hyper       = "1"
http        = "1"
async-trait = "0.1"
futures     = "0.3"

# Serialization / error / utility
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
thiserror   = "2"
anyhow      = "1"
tracing     = "0.1"

# Proc-macro
syn   = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[profile.release]
lto         = "thin"
codegen-units = 1
strip       = "symbols"
