[package]
name        = "kick-rs-assets"
version     = "0.1.0-alpha.3"
description = "Typed asset manifest + compile-time embedding for kick-rs"
readme      = "README.md"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[features]
default = ["embed"]
# `embed` pulls in our own proc-macro crate. Default-on because most
# adopters want bundled assets; opt out via default-features = false
# if you only need the manifest loader.
embed = ["dep:kick-rs-assets-macros"]

[dependencies]
kick-rs-core          = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
kick-rs-assets-macros = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
