[package]
name        = "kick-rs-cli"
version     = "0.1.0-alpha.1"
description = "`cargo kick` subcommand — scaffold (today), dev / generate / add (planned)"
readme      = "README.md"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
# Cargo subcommand convention — `cargo-<name>` runs as `cargo <name>`.
# Aliased down from `kick-rs` to `kick` for typability.
name = "cargo-kick"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
