[package]
name        = "kick-rs-cli"
version     = "0.1.0-alpha.2"
description = "`cargo kick` subcommand — scaffold (today), dev / generate / add (planned)"
readme      = "README.md"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
# Cargo subcommand convention — `cargo-<name>` runs as `cargo <name>`.
# Aliased down from `kick-rs` to `kick` for typability.
name = "cargo-kick"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
# toml_edit lets `cargo kick add` mutate features in Cargo.toml
# without rewriting the entire file (preserves layout, comments,
# blank lines, key ordering).
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3"
