[package]
name        = "kick-rs-config"
version     = "0.1.1"
description = "Layered, typed configuration loader for kick-rs (defaults + env + dotenv + toml + json)"
readme      = "README.md"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
kick-rs-core = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
toml         = { workspace = true }

[dev-dependencies]
tempfile = "3"
