[package]
name        = "kick-rs-http"
version     = "0.1.0-alpha.1"
description = "axum integration for kick-rs — bootstrap, Inject<T>, Ctx, built-in plugins"
readme      = "README.md"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[features]
# Built-in HttpPlugins for common HTTP concerns. Each is independently
# opt-out-able so adopters can trim deps when they don't need a given
# plugin. Default enables everything for the "just works" experience.
default = [
    "plugin-request-id",
    "plugin-request-logger",
    "plugin-cors",
    "plugin-compression",
    "plugin-helmet",
    "plugin-trace-context",
]

plugin-request-id     = ["dep:uuid"]
plugin-request-logger = []                          # only needs `tracing`, already present
plugin-cors           = ["tower-http/cors"]
plugin-compression    = ["tower-http/compression-full"]
plugin-helmet         = []                          # pure header-setting, no extra deps
plugin-trace-context  = ["dep:uuid"]                # for trace-id / span-id mint when traceparent is missing

[dependencies]
kick-rs-core = { workspace = true }
axum          = { workspace = true }
tokio         = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
hyper         = { workspace = true }
http          = { workspace = true }
async-trait   = { workspace = true }
futures       = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
uuid          = { version = "1", features = ["v4", "v7"], optional = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
