[package]
name        = "kick-rs-macros"
version     = "0.0.1"
description = "Opt-in proc-macro sugar for kick-rs (#[service])"
readme      = "README.md"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
proc-macro = true

[dependencies]
syn               = { workspace = true }
quote             = { workspace = true }
proc-macro2       = { workspace = true }
# Resolves the user-facing name of `kick-rs` / `kick-rs-core` at macro
# expansion time so the macro works whether the adopter imports the
# umbrella or the core crate directly.
proc-macro-crate  = "3"

[dev-dependencies]
# Integration tests need both the macro (this crate) and the trait it
# targets (kick-rs-core).
kick-rs-core = { workspace = true }
