[package]
name        = "kick-rs-macros"
version     = "0.1.0-alpha.3"
description = "Opt-in proc-macro sugar for kick-rs (#[service], #[contributor], #[get]/#[post]/...)"
readme      = "README.md"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
proc-macro = true

[dependencies]
syn               = { workspace = true }
quote             = { workspace = true }
proc-macro2       = { workspace = true }
# Resolves the user-facing name of `kick-rs` / `kick-rs-core` at macro
# expansion time so the macro works whether the adopter imports the
# umbrella or the core crate directly.
proc-macro-crate  = "3"

[dev-dependencies]
# Integration tests need the macro (this crate) and the traits it
# targets. The route-macro tests additionally exercise the HTTP
# plumbing end-to-end.
kick-rs-core = { workspace = true }
kick-rs-http = { workspace = true, features = ["openapi"] }
tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true, features = ["util"] }
serde_json   = { workspace = true }
utoipa       = "5"
