[package]
name        = "kick-rs"
version     = "0.1.0-alpha.2"
description = "Module-driven web framework for Rust — a port of KickJS on axum"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme      = "README.md"

[features]
default = []
# Re-exports `#[service]` (and friends) from `kick-rs-macros`. Opt-in
# because adopters who want the bare builder API don't need the
# proc-macro compile overhead.
macros = ["dep:kick-rs-macros"]

# Re-exports the `kick-rs-config` loader (env / dotenv / TOML / JSON
# layered into a typed `Config`). Opt-in because adopters who only
# read env vars themselves don't need the `toml` dep.
config = ["dep:kick-rs-config"]

# Enables OpenAPI integration on `kick-rs-http` (the `OpenApiPlugin` +
# `HttpModuleBuilder::openapi_path` + `openapi_paths` + the `paths!`
# macro path resolution). Opt-in because it pulls in `utoipa`.
openapi = ["kick-rs-http/openapi"]

# Enables the DevTools `/__debug` introspection endpoint on
# `kick-rs-http`. After enabling the feature, adopters still have to
# call `.with_devtools()` on `bootstrap()` to actually mount the route
# — two opt-ins by design.
devtools = ["kick-rs-http/devtools"]

# `assets` is still parked — lands once `kick-rs-assets` reaches
# publish-ready state. Adopters needing it early can depend on the
# crate directly.

[dependencies]
kick-rs-core   = { workspace = true }
kick-rs-http   = { workspace = true }
kick-rs-macros = { workspace = true, optional = true }
kick-rs-config = { workspace = true, optional = true }
