[package]
name        = "rustkick-assets"
version     = "0.0.0"
description = "Typed asset manifest + cache-busting resolver for rustkick"
# Placeholder body. Gated until Phase 5. See RELEASE.md.
publish     = false
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
rustkick-core = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
