[package]
name        = "rustkick-cli"
version     = "0.0.0"
description = "`cargo rustkick` subcommand — scaffold, dev, generate, add"
# Placeholder binary. Gated until Phase 5. See RELEASE.md.
publish     = false
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "cargo-rustkick"
path = "src/main.rs"

[dependencies]
# Real CLI deps (clap, minijinja, ...) land when the CLI is implemented;
# kept minimal here so the workspace builds.
