[package]
name        = "rustkick-core"
version     = "0.0.0"
description = "Core DI container, modules, adapters, plugins, and error model for rustkick"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
