[package]
name        = "rustkick-http"
version     = "0.0.0"
description = "axum integration for rustkick — bootstrap, Inject<T>, Ctx, built-in plugins"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
rustkick-core = { workspace = true }
axum          = { workspace = true }
tokio         = { workspace = true }
tower         = { workspace = true }
tower-http    = { workspace = true }
hyper         = { workspace = true }
http          = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
