[package]
name        = "users-api"
version     = "0.0.0"
description = "rustkick example — minimal users CRUD against Postgres via sqlx"
edition     = "2021"
publish     = false

[dependencies]
# rustkick lives in the workspace one directory up — relative path keeps
# the example unaware of any published version.
rustkick = { path = "../../crates/rustkick" }

tokio      = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum       = "0.7"
sqlx       = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio", "macros"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v7", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror  = "2"
async-trait = "0.1"
