[package]
name        = "users-api"
version     = "0.0.0"
description = "kick-rs example — minimal users CRUD against Postgres via sqlx"
edition     = "2021"
publish     = false

[dependencies]
# kick-rs lives in the workspace one directory up — relative path keeps
# the example unaware of any published version. `macros` enables the
# #[service] proc-macro used by repository.rs / service.rs.
kick-rs = { path = "../../crates/kick-rs", features = ["macros", "config", "openapi", "assets"] }

tokio      = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
axum       = "0.7"
sqlx       = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio", "macros"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v7", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror  = "2"
async-trait = "0.1"
utoipa     = { version = "5", features = ["uuid", "chrono"] }
